fixes to spacing

--- a/product.css
+++ b/product.css
@@ -1,16 +1,20 @@
 .columns {
-  padding-top: 25px;
+  padding-top: 35px;
   padding-left: 50px;
   padding-right: 50px;
 }
 
 .info-group {
-  padding-top: 25px;
+  padding-top: 35px;
 }
 
-.product-heading, .product-title, .buy-product {
+.product-heading {
   padding-left:100px;
-  padding-top: 15px;
+}
+
+.product-title, .buy-product {
+  padding-left:100px;
+  padding-top: 35px;
 }
 
 .product-description {
